// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Tolltip /> > should match snapshot when closed 1`] = `
<body
  class="theme_OD_Base__j49br80"
>
  <div>
    <div
      class="theme_OD_Base__j49br80"
      data-od-component-provider=""
    >
      <div>
        trigger
      </div>
    </div>
  </div>
  <div
    class="theme_OD_Base__j49br80"
  >
    <div
      aria-hidden="true"
      class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua0 Positioner_root__1d54b7d0"
    />
  </div>
</body>
`;

exports[`<Tolltip /> > should match snapshot when opened 1`] = `
<body
  class="theme_OD_Base__j49br80"
>
  <div>
    <div
      class="theme_OD_Base__j49br80"
      data-od-component-provider=""
    >
      <div>
        trigger
      </div>
    </div>
  </div>
  <div
    class="theme_OD_Base__j49br80"
  >
    <div
      aria-hidden="false"
      class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua0 Positioner_root__1d54b7d0"
      style="position: absolute; left: 0px; top: 0px; margin: 0px;"
    >
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju3l sprinkles_userSelect_none__onxwju3o sprinkles_borderRadius_1__onxwju0 sprinkles_boxShadow_4__onxwju3h sprinkles_paddingLeft_3_mobile__onxwjupo sprinkles_paddingRight_3_mobile__onxwjuqs sprinkles_paddingTop_2_mobile__onxwjurs sprinkles_paddingBottom_2_mobile__onxwjuog sprinkles_width_full_mobile__onxwjud4 sprinkles_overflow_hidden_mobile__onxwju8s sprinkles_backgroundColor_gray900__onxwju4i Tooltip_root__1qliafn0"
      >
        <span
          class="reset_inlineText__1oah0223 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_white__1xnpmd7g useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72"
        >
          tooltip content
        </span>
      </div>
    </div>
  </div>
</body>
`;
